<resources>
    <string name="app_name">Tinkoff Express</string>
    <string name="choose_delivery_type">Выберите способ получения</string>
    <string name="delivery_type_courier">Доставка</string>
    <string name="next">Продолжить</string>
    <string name="address_hint">Адрес</string>
    <string name="fav_addresses">Ваши адреса</string>
    <string name="cart_title_text">Корзина</string>
    <string name="price_placeholder">%1$d ₽</string>
    <string name="price_cross_placeholder">%1$d ₽ ×</string>
    <string name="item_count_placeholder">%1$d шт.</string>
    <string name="total_cost_text">Итоговая стоимость</string>
    <string name="make_order_text">Оформить</string>
    <string name="item_image_desc_text">Картинка товара</string>
    <string name="my_orders_title_text">Мои заказы</string>
    <string name="order_card_text">Доставка</string>
    <string name="orders_get_error">Не удалось получить заказы</string>
    <string name="request_process_error">Не удалось обработать запрос</string>
    <string name="orders_date_today">Сегодня</string>
    <string name="orders_date_tomorrow">Завтра</string>
    <string name="orders_date_in_one_day">Послезавтра</string>
    <string name="order_datetime_placeholder">%1$s, с %2$s до %3$s</string>
    <string name="appointment_button_placeholder">Доставить %1$s</string>
    <string name="timeslot_time_placeholder">%1$s–%2$s</string>
    <string name="comment_empty_placeholder">Можно написать %1$d %2$s</string>
    <string name="comment_placeholder">Осталось %1$d %2$s</string>
    <string name="onboarding_title_text">Оформите доставку дебетовой карты</string>
    <string name="onboarding_first_text">Выберите, куда и когда вам удобно ее привезти</string>
    <string name="onboarding_second_text">В назначенный день мы свяжемся с вами</string>
    <string name="onboarding_third_text">Представитель привезет документы и карту — на нее перечислим кредит</string>
    <string name="address_get_error">Не удалось получить адреса</string>
    <string name="address_not_found">Мы не знаем такого адреса</string>
    <string name="comment_hint_text">Как добраться и когда вам позвонить</string>
    <string name="order_placed_title_text">Заказ оформлен</string>
    <string name="where_title_text">Куда</string>
    <string name="when_title_text">Когда</string>
    <string name="what_title_text">Что привезём</string>
    <string name="ok_button_text">Хорошо</string>

    <string name="country_hint">Страна</string>
    <string name="region_hint">Регион</string>
    <string name="street_hint">Улица</string>
    <string name="house_hint">Строение/корпус</string>
    <string name="city_hint">Населенный пункт</string>
    <string name="index_hint">Индекс</string>
    <string name="button_done">Готово</string>
    <string name="title_address_toggle">Изменить ввод адреса</string>
    <string name="save">Сохранить</string>
    <string name="empty_address_error">Адрес не может быть пустым</string>
    <string name="parcel">Посылку</string>

    <string name="address_toggle">Использовать автозаполнение адреса</string>
    <string name="catalog_title">Каталог</string>
    <string name="cart_title">Корзина</string>
    <string name="orders_title">Мои заказы</string>

    <string name="order_flow_actionbar_title">Оформление заказа</string>
    <string name="orders_actionbar_title">Мои заказы</string>
    <string name="address_actionbar_title">Куда доставить</string>

    <plurals name="comment_symbols">
        <item quantity="zero">символов</item>
        <item quantity="one">символ</item>
        <item quantity="two">символа</item>
        <item quantity="few">символа</item>
        <item quantity="many">символов</item>
        <item quantity="other">символов</item>
    </plurals>

    <plurals name="items">
        <item quantity="zero">товаров</item>
        <item quantity="one">товар</item>
        <item quantity="two">товара</item>
        <item quantity="few">товара</item>
        <item quantity="many">товаров</item>
        <item quantity="other">товаров</item>
    </plurals>

    <string name="title_bring">Что привезем</string>
    <string name="delivery_title">Доставка</string>
    <string name="change">Изменить</string>
    <string name="payment_method">Способ оплаты</string>
    <string name="card_payment">Картой при получении</string>
    <string name="cash_payment">Наличными курьеру</string>
    <string name="time_range">%1$s с %2$s до %3$s</string>
    <string name="confirm">Оформить</string>
    <string name="order_creation_error">Не удалось создать заказ</string>
    <string name="order_cancel">Отменить</string>
    <string name="order_cancel_confirmation">Вы уверены, что хотите отменить доставку?</string>
    <string name="order_cancel_yes">ДА</string>
    <string name="order_cancel_no">НЕТ</string>
    <string name="order_update_error">Не удалось обновить заказ</string>
    <string name="delivery_canceled">Доставка отменена</string>
    <string name="no_connection">Нет интернета</string>
    <string name="error_alert_dialog_title">Что-то пошло не так</string>
    <string name="alert_dialog_ok">Понятно</string>
    <string name="address_input_hint">Введите адрес</string>

    <string name="cart_item_kettle">Чайник электрический</string>
    <string name="cart_item_phone">Смартфон</string>
    <string name="cart_item_hammer">Молоток</string>
    <string name="cart_items_count_placeholder">%1$d %2$s</string>
    <string name="empty_cart_title">Ваша корзина пуста</string>
</resources>
