<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_country"
        style="@style/Widget.TinkoffLab.CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/country_hint"
        app:endIconDrawable="@drawable/ic_end_clear"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine"
            android:imeOptions="actionNext"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_region"
        style="@style/Widget.TinkoffLab.CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/region_hint"
        app:endIconDrawable="@drawable/ic_end_clear"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/textinputlayout_country">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine"
            android:imeOptions="actionNext"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_street"
        style="@style/Widget.TinkoffLab.CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/street_hint"
        app:endIconDrawable="@drawable/ic_end_clear"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/textinputlayout_region">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine"
            android:imeOptions="actionNext"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_house"
        style="@style/Widget.TinkoffLab.CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/house_hint"
        app:endIconDrawable="@drawable/ic_end_clear"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/textinputlayout_street">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_house"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine"
            android:imeOptions="actionNext"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_city"
        style="@style/Widget.TinkoffLab.CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/city_hint"
        app:endIconDrawable="@drawable/ic_end_clear"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/textinputlayout_house">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine"
            android:imeOptions="actionNext"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_index"
        style="@style/Widget.TinkoffLab.CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/index_hint"
        app:endIconDrawable="@drawable/ic_end_clear"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/textinputlayout_city">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|textImeMultiLine"
            android:imeOptions="actionDone"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--  todo: fix color and ripple  -->
    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_done_button"
        android:text="@string/button_done"
        android:textColor="@color/white_fixed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
