<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.voxeldev.tinkofflab.ui.views.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:endIcon="@drawable/ic_toolbar_menu"
        app:startIcon="@drawable/ic_toolbar_back"
        app:title="@string/order_flow_actionbar_title" />

    <include
        android:id="@+id/blocking_loader"
        layout="@layout/view_blocking_loader"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview_root"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_continue"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_appointment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/bg_edittext"
                android:focusable="false"
                android:cursorVisible="false"
                android:hint="@string/address_input_hint"
                android:padding="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/scrollview_days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_address">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipgroup_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true"
                    tools:layout_height="40dp" />

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_timeslots"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollview_days"
                tools:itemCount="3"
                tools:listitem="@layout/item_timeslot" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_comment"
                style="@style/Widget.TinkoffLab.CustomTextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:endIconDrawable="@drawable/ic_end_clear"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerview_timeslots">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment_hint_text"
                    android:maxLength="150" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_counter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="38dp"
                android:layout_marginTop="12dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textinputlayout_comment"
                tools:text="Можно написать 150 символов" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.voxeldev.tinkofflab.ui.views.ContinueButtonView
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
